Fix z-index of ReactionSelectionMenu popover

--- a/packages/components/src/reaction_selection_menu/index.module.scss
+++ b/packages/components/src/reaction_selection_menu/index.module.scss
@@ -21,6 +21,8 @@
   background-color: #fff;
 
   border-radius: 28px;
+
+  z-index: 2;
 }
 
 .reaction {
